<resources>
    <string name="app_name">The home of ABC cricket club</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_login">Login</string>
    <string name="username">Username</string>
    <string name="passwd">Password</string>
    <string name="title">Welcome to ABC Cricket Club</string>
    <string name="footer">ABC Cricket club</string>
    <string name="login_page_display_message">Login Page</string>
    <string name="articleValue">Article Value</string>
    <string name="fixed_footer">ABC Cricket club @copyright 2016</string>
    <string name="fixed_header">Welcome to ABC Cricket club</string>
    <string name="user_welcome">Welcome Ajit Skanda</string>
    <string name="calendar_msg">Calendar for current month</string>
</resources>
